[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/pypa/sampleproject
project_urls =
    Documentation = https://docs.hyper.co/reference
    Source Code = https://github.com/meta-labs/hyper-python
install_requirements =
    requests >= 2.20; python_version >= '3.0'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src